kubernetes/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels:
    app: dsm-client

spec:
  selector:
    matchLabels:
      app: dsm-client

  template:
    metadata:
      labels:
        app: dsm-client

    spec:
      securityContext:
        fsGroup: 101
        runAsUser: 101
        runAsGroup: 101
        runAsNonRoot: true

      containers:
        - name: dsm-client
          image: IMAGE
          resources:
            limits:
              memory: 32Mi
              cpu: 500m
            requests:
              memory: 32Mi
              cpu: 5m
          ports:
            - name: http
              containerPort: 8080

          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
            successThreshold: 1

          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
            successThreshold: 1
            initialDelaySeconds: 5
