kubernetes/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service
  labels:
    app: dsm-client
spec:
  selector:
    app: dsm-client
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
